fixed overflow horizontal scrolling on phone

--- a/assets/main.css
+++ b/assets/main.css
@@ -1147,6 +1147,9 @@ table {
         -ms-flex-order: 1;
             order: 1; } }
 
+html, body {
+  overflow-x: hidden; }
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
@@ -1223,6 +1226,8 @@ section {
   font-size: 20px; }
 
 .landing-page {
+  margin: 0;
+  max-width: 100%;
   height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.45)), to(rgba(255, 0, 0, 0.45))), url(./sections/header/landing-page.jpg);
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.45), rgba(255, 0, 0, 0.45)), url(./sections/header/landing-page.jpg);
