--- a/assets/sections/header/_header.scss
+++ b/assets/sections/header/_header.scss
@@ -1,4 +1,6 @@
 .landing-page {
+  margin: 0;
+  max-width: 100%;
   height: 100vh;
   background:
     linear-gradient(
